# dcat-query-classifier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.yaml.example  pyproject.toml  requirements.txt
data/: dataset.csv  dataset_extended.csv
examples/: interactive_demo.py  sparql_generator.py
locales/en/LC_MESSAGES/: sparql_humanize.po
locales/es/LC_MESSAGES/: sparql_humanize.po
src/: config.py  i18n.py  logger.py  model.py  predict.py  preprocessing.py  train.py  utils.py
src/sparql_humanize/: __init__.py  cli.py  config.py  model.py  predict.py  preprocessing.py  sparql_generator.py  train.py  utils.py
tests/: conftest.py  test_preprocessing.py
